Update picom config file.

--- a/config-files/picom.conf
+++ b/config-files/picom.conf
@@ -9,7 +9,7 @@ rounded-corners-exclude = [
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
   "class_g = 'kitty'",
-  "class_g = 'Alacritty'",
+  #"class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
   "class_g = 'firefox'",
@@ -30,7 +30,7 @@ round-borders-exclude = [
 round-borders-rule = [
   "3:class_g      = 'XTerm'",
   "3:class_g      = 'URxvt'",
-  "10:class_g     = 'Alacritty'",
+  #"10:class_g     = 'Alacritty'",
   "15:class_g     = 'Signal'"
 ];
 
@@ -177,20 +177,12 @@ focus-exclude = [
 #
 # opacity-rule = []
 opacity-rule = [
-  "65:class_g     = 'Gnome-terminal'",             # lemonbar
-  #"50:class_g     = 'teminator'",             # lemonbar
-  "90:class_g    = 'Rofi'",            # maim
-  #"70:class_g    = 'Code'",
-  "100:class_g    = 'URxvt'",
-  "100:class_g    = 'kitty'",
-  "100:class_g    = 'Alacritty'",
-  "100:class_g     = 'Polybar'",
-  "100:class_g    = 'code-oss'",
-  "100:class_g    = 'Meld'",
-  "70:class_g     = 'TelegramDesktop'",
-  "90:class_g     = 'Joplin'",
-  "100:class_g    = 'firefox'",
-  "100:class_g    = 'Thunderbird'"
+  "65:class_g  = 'Gnome-terminal'",       
+  "80:class_g  = 'Alacritty'",            
+  "90:class_g  = 'Rofi'",            
+  "90:class_g  = 'Code'",
+  "100:class_g = 'Polybar'",
+  "85:class_g  = 'Bspwm'"
 ];
 
 
