Add kitty by default emulator terminal.

--- a/config-files/picom.conf
+++ b/config-files/picom.conf
@@ -178,7 +178,8 @@ focus-exclude = [
 # opacity-rule = []
 opacity-rule = [
   "65:class_g  = 'Gnome-terminal'",       
-  "80:class_g  = 'Alacritty'",            
+  "80:class_g  = 'Alacritty'", 
+  "80:class_g  = 'kitty'",                       
   "90:class_g  = 'Rofi'",            
   "90:class_g  = 'Code'",
   "100:class_g = 'Polybar'",
