Add Debian config to custom menu.

--- a/config-files/dotfiles/picom/picom.conf
+++ b/config-files/dotfiles/picom/picom.conf
@@ -8,7 +8,7 @@ rounded-corners-exclude = [
   "class_g = 'awesome'",
   "class_g = 'URxvt'",
   "class_g = 'XTerm'",
-  "class_g = 'kitty'",
+  #"class_g = 'kitty'",
   #"class_g = 'Alacritty'",
   "class_g = 'Polybar'",
   "class_g = 'code-oss'",
