--- a/config-files/dotfiles/picom/picom.conf
+++ b/config-files/dotfiles/picom/picom.conf
@@ -179,7 +179,8 @@ focus-exclude = [
 opacity-rule = [
   "65:class_g  = 'Gnome-terminal'",       
   "80:class_g  = 'Alacritty'", 
-  "80:class_g  = 'kitty'",                       
+  "80:class_g  = 'kitty'",
+  "90:class_g  = 'Brave-browser'",                       
   "90:class_g  = 'Rofi'",            
   "90:class_g  = 'Code'",
   "100:class_g = 'Polybar'",
